--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
+    <title>Your Sample Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="index.html"><h1>Your Sample page</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
@@ -54,8 +54,8 @@
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
             </li>
             <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
+              <a href="tel:8952093941">
+                <span>8952093941</span></a><div>* Please Call</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -64,12 +64,12 @@
   </header>
 
   <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel:410-602-5008">
+    <a class="btn" href="tel:8952093941">
     <span class="glyphicon glyphicon-earphone"></span>
-    410-602-5008
+    8952093941
     </a>
   </div>
-  <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+  <div id="xs-deliver" class="text-center visible-xs">* Please Call</div>
 
   <div id="main-content" class="container"></div>
 
@@ -85,8 +85,8 @@
         </section>
         <section id="address" class="col-sm-4">
           <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
+          Hitech City, Hyderabad<br>
+          Telangana
           <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
           <hr class="visible-xs">
         </section>
